xscroll fixed(sort of);mobile cards aligned, adding dates con&filter con

--- a/TempStyle/style.css
+++ b/TempStyle/style.css
@@ -232,6 +232,7 @@ html {
 
 /*main content styling*/
 #main_max_con {
+  display: block;
   width: 100%;
   height: 93vh;
   margin: 0 auto;
@@ -380,11 +381,26 @@ li .camp_title-con {
 }
 /*resizing map container for tablet/min-width for list breakpoint*/
 @media only screen and (max-width: 915px) {
+
+.date_input-con {
+  display: block;
+  width: 100vw;
+  height: 75px;
+  background-color: grey;
+}
+.applied_filters-con {
+  display: block;
+  width: 100vw;
+  height: 75px;
+  background-color: tan;
+}
+
+
   .search_map-con {
-    position: absolute;
     top: 70px;
     left: 0;
     width: -webkit-fill-available;
+    height: 75vh;
     z-index: -100;
   }
   .camp_list-con {
@@ -392,21 +408,34 @@ li .camp_title-con {
     max-width: none;
     position: absolute;
     bottom: 10px;
-    width: 100%;
+    width: 100vw;
     height: 10em;
-    overflow: scroll;
     overflow-y: hidden;
-    overflow-x: scroll;
-    border: 2px solid red;
   }
-  .camp_results ul {
-    overflow: hidden;
-    overflow: scroll;
+
+  .camp_list-con ul {
+    display: block;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
+.camp_list-con .camp_card-abt_con, .camp_local-icon, #camp_local {
+  display: none;
+}
   .camp_results li {
-    float: left;
-    width: 250px;
-    margin-left: 20px;
+    display: inline-block;
+    width: 300px;
+    height: 100px;
+    margin-left: 15px;
+    vertical-align: top;
+    }
+    li .camp_title-con{
+      clear: unset;
+      height: 100%;
+      border-radius: 20px;
+    }
+    #camp_pic--card {
+      border-radius: 20px;
     }
 }
 
